[package]
name = "zkrakend"
version = "0.1.0-alpha"
edition = "2021"
repository = "https://github.com/Huskehhh/zkrakend"
description = "A cross-platform driver for the Kraken Z series AIO coolers written in Rust."
license = "MIT"

[dependencies]
rusb = { git = "https://github.com/a1ien/rusb" }
color-eyre = "0.6"
zkraken-lib = { path="../zkraken-lib" }